Fix scrollbar width for Firefox

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -161,6 +161,11 @@ tr:nth-child(even) {
   background-color: #f2f2f207;
 }
 
+/* FIREFOX */
+#cart-items-div {
+  scrollbar-width: thin;
+}
+
 #cart-items-div::-webkit-scrollbar {
   width: 2px;
 }
